src/app/components/search/search-analytics/search-history-container/search-history-container.component.css
.history-doctors{
  padding-top: 5em;
  padding-bottom: 5em;
  padding-left: 0em;
  display: block;
  background-color: #F06292;
  margin-bottom: 3em;
}
.nrow span #history-doctors-title1{
  display: flex;
  justify-content: center;
  font-size: 1.5em;
  color: white;
  padding-bottom: 1em;
}
span #history-doctors-footer{
  display: flex;
  justify-content: center;
  font-size: 1.5em;
  color: white;
  padding-bottom: 1em;
}
span #history-doctors-footer:hover{
  display: flex;
  justify-content: center;
  font-size: 1.5em;
  color: white;
  padding-bottom: 1em;
  text-decoration: underline;
}
.nrow span #history-doctors-title2{
  display: flex;
  justify-content: center;
  font-size: 3em;
  color: white;
}
::ng-deep .mat-divider{
  width:0%;
  height: 3em;
  animation-duration: 2s;
  animation-name: mymove;
  animation-fill-mode: forwards;
}
@keyframes mymove {
  from {width: 30%;}
  to {width: 100%;}
}

::-webkit-scrollbar {
  width: 1px;
  height: 1px;
}

::-webkit-scrollbar-button {
  width: 1px;
  height: 1px;
}

.list-doctors{
  display: flex;
  overflow-x: scroll;
  overflow-y: hidden;
  
}
.cards{
  margin-right: 20px;
}
.card {
  /* width: 3em; 
  height: 2em;
  margin: 2em;
  border-radius: 10px;
  background: white;
  display: inline-block;
   padding: 1%; */
   width: 3em;
   height: 2em;
   margin: 2em;
   border-radius: 10px;
   background: white;
   display: inline-block;
   align-content: center;
   padding: 1em;
}
.ngcont{
  margin: 1%;
  padding: 1%;
  width: 3em;
}
.search-history-card{
  justify-content: center;
  top: 2em;
  padding-top:20em;
}
.search-history-panel{
  margin-left: 2em;
}
.card--z-1 {
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 2px 5px rgba(0, 0, 0, 0.26);
  border: 1px solid #eee;
}

